src/test/run-pass/borrowck-move-from-unsafe-ptr-ok.rs
// just make sure this compiles:

fn bar(x: *~int) -> ~int {
    unsafe {
        let y = move *x;
        return y;
    }
}

fn main() {
}